Frontend has been finished

--- a/Front/kolesnik/src/styles/components/_header.css
+++ b/Front/kolesnik/src/styles/components/_header.css
@@ -1,5 +1,5 @@
 .lv1{
-    background: #1F2937;
+    background: #4297D7;
     color: #ffff;
     min-height: 84px;
 }
@@ -15,7 +15,7 @@
 }
 
 nav{
-    background: #374151;
+    background: #3474A5;
     height: 64px;
 }
 
