--- a/Front/kolesnik/src/styles/components/_footer.css
+++ b/Front/kolesnik/src/styles/components/_footer.css
@@ -1,9 +1,10 @@
 footer{
-    background: #1F2937;
+    background: #26252B;
     color: #ffff;
     font-size: 16px;
     min-height: 56px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
 }
