--- a/Front/kolesnik/src/styles/components/_header.css
+++ b/Front/kolesnik/src/styles/components/_header.css
@@ -5,12 +5,15 @@
 }
 
 .header-text{
-    height: 100%;
+    min-height: 84px;
+}
+
+.header-text img{
+    margin-left: 30px;
 }
 
 .header-text h1{
     font-size: 30px;
-    margin-top: 20px;
     margin-left: 85px;
 }
 
